# HW_matrix

./: 111.in  222.in  333.in  444.in  555.in  CMakeLists.txt  README.md  a.out  bla.py  blabla.c  det.py
headers/: matrix.h  matrix.hpp
source/: main  main.cpp
tests/: 222.in  333.in  444.in  555.in  666.in  det.py  unit_tests.cpp
